feat: improve travel blog organization and add favicon
- Add favicon (onion_icon.png) to default layout
- Reorganize travel posts structure (move files to etc/, japan/ directories)
- Update travel/home.md with all travel posts organized by year and country
- Convert chiang_mai_plan.md to proper markdown format
- Remove personal information (names, addresses, passwords) from travel posts
- Add new travel posts: ciang_mai_review.md, phuquoc_202501.md, sapporo.md

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,11 @@
   <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
   <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
   
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="{{ '/resources/onion_icon.png' | relative_url }}">
+  <link rel="shortcut icon" type="image/png" href="{{ '/resources/onion_icon.png' | relative_url }}">
+  <link rel="apple-touch-icon" href="{{ '/resources/onion_icon.png' | relative_url }}">
+  
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
