--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,9 @@
   <!-- RSS Feed -->
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ '/feed.xml' | relative_url }}">
   
+  <!-- Syntax Highlighting CSS -->
+  <link rel="stylesheet" href="{{ '/assets/css/syntax.css' | relative_url }}">
+  
   <!-- Google Tag Manager -->
   {% if site.google_tag_manager %}
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -151,6 +154,26 @@
     }
     
     article .content pre code {
+      background-color: transparent;
+      padding: 0;
+    }
+    
+    /* Rouge syntax highlighting styles */
+    article .content .highlight {
+      background-color: #f6f8fa;
+      border-radius: 5px;
+      padding: 15px;
+      overflow-x: auto;
+      margin-bottom: 15px;
+    }
+    
+    article .content .highlight pre {
+      background-color: transparent;
+      padding: 0;
+      margin: 0;
+    }
+    
+    article .content .highlight code {
       background-color: transparent;
       padding: 0;
     }
