--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,9 @@
   <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
   
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="{{ '/resources/onion_icon.png' | relative_url }}">
-  <link rel="shortcut icon" type="image/png" href="{{ '/resources/onion_icon.png' | relative_url }}">
-  <link rel="apple-touch-icon" href="{{ '/resources/onion_icon.png' | relative_url }}">
+  <link rel="icon" type="image/png" href="{{ '/resources/favicon.png' | relative_url }}">
+  <link rel="shortcut icon" type="image/png" href="{{ '/resources/favicon.png' | relative_url }}">
+  <link rel="apple-touch-icon" href="{{ '/resources/favicon.png' | relative_url }}">
   
   <!-- RSS Feed -->
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ '/feed.xml' | relative_url }}">
