docs: convert snippets non-md files to markdown posts with template format

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -84,8 +84,10 @@ layout: default
   </div>
   {% endif %}
   
+  <!--  Footer 영역
   <div style="margin-top: 40px; padding-top: 20px; border-top: 1px solid #eee;">
     <a href="{{ '/' | relative_url }}">← 목록으로</a>
   </div>
+  -->
 </article>
 
