--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -275,8 +275,9 @@
     </main>
     
     <footer>
-      <p>&copy; {{ site.time | date: "%Y" }} {{ site.title }} | 
-      <a href="https://github.com/Shiwoo-Park/blog">GitHub Repository</a></p>
+      <p>&copy; {{ site.time | date: "%Y" }} {{ site.title }} 
+        {% comment %} | <a href="https://github.com/Shiwoo-Park/blog">GitHub Repository</a> {% endcomment %}
+    </p>
     </footer>
   </div>
 </body>
