docs: update README, layouts and index page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -261,12 +261,12 @@
     <header>
       <h1><a href="{{ '/' | relative_url }}">{{ site.title }}</a></h1>
       <nav>
-        <a href="{{ '/' | relative_url }}">홈</a>
-        <a href="{{ '/posts/favorite' | relative_url }}">즐겨찾기</a>
-        <a href="{{ '/posts/dev/home' | relative_url }}">기술 블로그</a>
-        <a href="{{ '/posts/invest/home' | relative_url }}">투자 블로그</a>
-        <a href="{{ '/posts/travel/home' | relative_url }}">여행 블로그</a>
-        <a href="{{ '/snippets/home' | relative_url }}">코드 스니펫</a>
+        <a href="{{ '/' | relative_url }}">🏠</a>
+        <a href="{{ '/posts/favorite' | relative_url }}">⭐</a>
+        <a href="{{ '/posts/dev/home' | relative_url }}">💻개발</a>
+        <a href="{{ '/posts/invest/home' | relative_url }}">📈투자</a>
+        <a href="{{ '/posts/travel/home' | relative_url }}">✈️여행</a>
+        <a href="{{ '/snippets/home' | relative_url }}">🛠️코드</a>
       </nav>
     </header>
     
