--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -65,19 +65,32 @@ layout: default
     </div>
   </header>
   
+  <!-- AdSense 인피드 광고 (컨텐츠 최상단) -->
+  {% if site.google_adsense and site.google_adsense_infeed_slot %}
+  <div class="adsense-container" style="margin: 20px 0;">
+    <ins class="adsbygoogle"
+         style="display:block; text-align:center;"
+         data-ad-layout="in-article"
+         data-ad-format="fluid"
+         data-ad-client="{{ site.google_adsense }}"
+         data-ad-slot="{{ site.google_adsense_infeed_slot }}"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+  {% endif %}
+  
   <div class="content">
     {{ content }}
   </div>
   
-  <!-- AdSense 광고 (포스트 하단) -->
-  {% if site.google_adsense %}
-  <div class="adsense-container">
+  <!-- AdSense 수평형 광고 (컨텐츠 하단) -->
+  {% if site.google_adsense and site.google_adsense_horizontal_slot %}
+  <div class="adsense-container" style="margin: 30px 0; text-align: center;">
     <ins class="adsbygoogle"
-         style="display:block"
+         style="display:inline-block;width:740px;height:90px"
          data-ad-client="{{ site.google_adsense }}"
-         data-ad-slot="1234567890"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
+         data-ad-slot="{{ site.google_adsense_horizontal_slot }}"></ins>
     <script>
          (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
